# P2K-ELF-SDK

./: .gitattributes  .gitignore  ReadMe.md
cmake/: ADS_Custom_Compiler.yaml  P2K_ELF_SDK.cmake  P2K_EP1_Toolchain.cmake  P2K_EP2_PostLink.cmake  P2K_EP2_Toolchain.cmake  WIN32_MinGW_Toolchain.cmake  custom_compiler_ADS.yaml
doc/: FindFunctionPatterns.md  ReadMe.md  Rebuild_EP_Libraries.md  Rebuilder.md  TODOs.md
ep/ep1/lib/arm/: CMakeLists.txt
ep/ep1/lib/dbg/: CMakeLists.txt
ep/ep1/lib/pltentry/: CMakeLists.txt
ep1/: ReadMe.md
ep1/def/: DoNotRamTrans.def  ElfLoaderAPI1.def  NeededFunctions.def  NeededFunctionsWraps.def  ReadMe.md
ep1/inc/: ccfile.h  cini.h
ep1/lib/ini/: CMakeLists.txt  ccfile.cpp  cini.cpp
ep1/pat/: C650_R365_G_0B.D3.08R.pat  E1_R373_G_0E.30.DAR.pat  General.pat  L6i_R3443H1_G_0A.65.0BR.pat
ep1/pts/: C650_R365_G_0B.D3.08R.pts  E1_R373_G_0E.30.DAR.pts  General_P2K_LTE.pts  General_P2K_LTE2.pts  General_P2K_LTE2_Modern.pts  General_P2K_Neptune.pts  L6_R3511_G_0A.52.45R_A.pts  L6i_R3443H1_G_0A.65.0BR.pts  ReadMe.md  V600_TRIPLETS_G_0B.09.72R.pts
ep1/res/: FBrowser.elf  ReadMe.md  auto.run
ep1/src/: AFW_CreateInternalQueuedEv_Wrappers.c  AutoRun.c  AutoRun.h  ElfLoader.c  ElfLoader.h  ElfLoaderApp.c  ElfLoaderApp.h  ReadMe.md  elf.h
ep1/sym/: C650_R365_G_0B.D3.08R.sym  K3_R261171LD_U_99.51.06R.sym  LTE2_IROM.sym  ReadMe.md
ep1/tpl/: ElfPack.tpl  ElfPackArgon.tpl  ElfPackNeptune.tpl  ReadMe.md
ep2/def/: EntriesNames.def
ep2/fpa/: L7e_0AR_Drop_UIS_LogString.fpa  L9_05R_Drop_UIS_LogString.fpa  Z3_05R_Drop_UIS_LogString.fpa  Z3_09R_Drop_UIS_LogString.fpa  Z3_0DR_Drop_UIS_LogString.fpa
ep2/src/: API.c  config.h  console.c  dd.c  dd.h  elfloaderApp.c  loadCommon.c  loadDefLib.c  loadLibrary.c  utils.c  utils.h
lib/E1_R373_G_0E.30.49R/: elfloader.lib  elfloader.sym  library.sym
lib/E1_R373_G_0E.30.79R/: elfloader.lib  elfloader.sym  library.sym
lib/E1_R373_G_0E.30.DAR/: elfloader.lib  elfloader.sym  library.sym
lib/K1_R452F_G_08.03.08R/: elfloader.lib  elfloader.sym  library.sym
lib/L6_R3511_G_0A.52.45R_A/: elfloader.lib  elfloader.sym
lib/L6i_R3443H1_G_0A.65.0BR/: elfloader.lib  elfloader.sym
lib/L7_R4513_G_08.B7.ACR_RB/: elfloader.lib  elfloader.sym  library.sym
lib/L7_R4513_G_08.B7.E0R_RB/: elfloader.lib  elfloader.sym  library.sym
lib/L7e_R452D_G_08.01.0AR/: elfloader.lib  elfloader.sym  library.sym
lib/L9_R452J_G_08.22.05R/: elfloader.lib  elfloader.sym  library.sym
lib/V235_R3512_G_0A.30.6CR/: elfloader.lib  elfloader.sym
lib/V360_R4513_G_08.B7.ACR/: elfloader.lib  elfloader.sym  library.sym
lib/V3i_R4441D_G_08.01.03R/: elfloader.lib  elfloader.sym  library.sym
lib/V3r_R4515_G_08.BD.D3R/: elfloader.lib  elfloader.sym  library.sym
lib/V600_TRIPLETS_G_0B.09.72R/: elfloader.lib  elfloader.sym  library.sym
lib/Z3_R452B_G_08.02.0DR/: elfloader.lib  elfloader.sym  library.sym
lib/Z3_R452F1_G_08.04.09R/: elfloader.lib  elfloader.sym  library.sym
lib/Z3_R452H6_G_08.00.05R/: elfloader.lib  elfloader.sym  library.sym
res/C650_R365_G_0B.D3.08R/: elfloader.lib  elfloader.sym
res/E1_R373_G_0E.30.49R/: elfloader.lib  elfloader.sym  library.sym
res/E1_R373_G_0E.30.79R/: elfloader.sym  library.sym
res/E1_R373_G_0E.30.DAR/: elfloader.sym  library.sym
res/E1_R373_G_0E.30.DAR_test16/: elfloader.lib  elfloader.sym  library.sym
res/E1_R373_G_0E.30.DAR_test17/: elfloader.lib  elfloader.sym  library.sym
res/E1_R373_G_0E.30.DAR_test17_v80/: elfloader.lib  elfloader.sym  library.sym
res/E825_R25212_U_91.88.10R/: elfloader.lib  elfloader.sym
res/K1_R452F_G_08.03.08R/: elfloader.lib  elfloader.sym  library.sym
res/K1s_R47121_G_08.01.11R/: elfloader.lib  elfloader.sym
res/K3_R261171LD_U_99.51.06R/: Lib.sym  elfloader.lib  elfloader.sym
res/K3m_R261171MLD_U_99.51.06R/: elfloader.lib  elfloader.sym
res/L6_R3511_G_0A.52.45R_A/: elfloader.lib  elfloader.sym
res/L6i_R3443H1_G_0A.65.0BR/: elfloader.lib  elfloader.sym
res/L7_R4513_G_08.B7.ACR_RB/: elfloader.lib  elfloader.sym  library.sym
res/L7_R4513_G_08.B7.E0R_RB/: elfloader.lib  elfloader.sym  library.sym
res/L7e_R452D_G_08.01.0AR/: elfloader.lib  elfloader.sym  library.sym
res/L9_R452J_G_08.22.05R/: elfloader.lib  elfloader.sym  library.sym
res/M702iG_V2000_U_90.21.21I/: elfloader.lib  elfloader.sym
res/M702iS_V2000_U_90.21.0C.C2I/: elfloader.lib  elfloader.sym
res/V235_R3512_G_0A.30.6CR/: elfloader.lib  elfloader.sym
res/V360_R4513_G_08.B7.ACR/: elfloader.sym  library.sym
res/V3i_R4441D_G_08.01.03R/: elfloader.sym  library.sym
res/V3r_R4515_G_08.BD.D3R/: elfloader.sym  library.sym
res/V3xx_R26111LD_U_96.A0.0ER/: elfloader.lib  elfloader.sym
res/V600_TRIPLETS_G_0B.09.72R/: elfloader.lib  elfloader.sym  library.sym
res/V635_R474_G_08.48.6FR/: elfloader.lib  elfloader.sym
res/Z3_R452B_G_08.02.0DR/: elfloader.lib  elfloader.sym  library.sym
res/Z3_R452F1_G_08.04.09R/: elfloader.sym  library.sym
res/Z3_R452H6_G_08.00.05R/: elfloader.lib  elfloader.sym  library.sym
sdk/: P2kTypes.h  alarm.h  apps.h  ati.h  bgmanager_api.h  bluetooth.h  bt.h  canvas.h  consts.h  crypt.h  dal.h  datebook.h  dbg.h  dl.h  dl_keypad.h  dsma.h  ev_codes1.h  ev_codes2.h  events.h  filesystem.h  gain.h  hw_keypad.h  java.h  lang_strings.h  loader.h  loader1.h  loader2.h  mem.h  mma.h  mme.h  mme_other.h  phonebook.h  res_def.h  resources.h  shortcuts.h  shortcuts_other.h  sms.h  solib.h  stdarg1.h  stdarg2.h  (+12 more)
sdk/new/: Doxyfile  P2kAfwT.h  (+54 more)
tool/: EP2_Build_Log.txt  TODOs.txt  bin2fpa.py  compare.py  ep1_libgen.py  ep1_portkit.py  ep2_libgen.py  ep2_portkit.py  forge.py  fpa.py  pat  patch.py  patcher.py  postlink
tool/ep1_pat/: CMakeLists.txt  api.c  libpat.h  parser.cpp  parser.h  pat.cpp
tool/ep1_pat/find_patterns/: ReadMe.md  findAllPatterns.asm  findPatterns.inc
tool/ep2_postlink/: CMakeLists.txt  common.h  postlink.cpp
tool/postlinker/: CMakeLists.txt  ReadMe.md  constlib.cpp  elf.h  postlink.cpp
tool/src/pat/: CMakeLists.txt  ReadMe.md  api.c  common.h  libpat.h  parser.cpp  pat.cpp  ramtrans.cpp
tool/src/pat/find_func/: ReadMe.md
(+201 files in other folders)
